java-web-app/overlays/production/02-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-webapp-deployment
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
