java-web-app/overlays/production/03-security-context.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-webapp-deployment
spec:
  template:
    spec:
      securityContext:
        runAsUser: 1000
