java-web-app/overlays/production/04-probe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-webapp-deployment
spec:
  template:
    spec:
      containers:
        - name: java-webapp
          image: springio/gs-spring-boot-docker:latest
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
