java-web-app/overlays/production/01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-webapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: "java-webapp-example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-webapp-service
            port:
              number: 8080
  tls:
  - hosts:
    - "java-webapp-example.com"
    secretName: java-webapp-cert
---
